Continuing to add back functionality lost from Visualizer.

--- a/lua_widget_m4_info.properties
+++ b/lua_widget_m4_info.properties
@@ -1,5 +1,5 @@
 #This file contains the lua m4Constants, the widgetQualifying ids and the type of the widget
-#Thu May 22 16:45:52 EDT 2014
+#Thu May 22 18:26:15 EDT 2014
 ~|~frmDowntime.HBox0c75f81874c1f42=box
 ~|~frmValveInspection.HBox0b56740eae09645=box
 ~|~popTimePicker.CopyButton0bcf4d218cf034e=button
@@ -13,7 +13,6 @@
 ~|~popupEquipment.CopyhbxSelectedSite0a83de29403554e=box
 ~|~frmValveInspection.CopyHBoxproblemCode09f431432eb0743=box
 ~|~frmViewAwaitingWO.CopyLabel00e429794d33c49=label
-~|~frmViewMoreInfo.CopySegment06d36cd0777dd4f=segment2
 ~|~popAttachments.HBox03a58a73124034d=box
 ~|~frmEditActiveWO.CopyComboBox05611e3e70d6a47=combobox
 ~|~frmEditActiveWO.CopyLabel06d31378aace348=label
@@ -46,7 +45,6 @@
 ~|~frmEditActiveWO.CopyComboBox02e07452c3f8141=combobox
 ~|~popupFacSystem.CopyhbxSelectedSite0c94a8df6020145=box
 ~|~popupSubEquipment.CopyLabel0798cebc05c294e=label
-~|~frmLongdesc.HBox02b07e2e0911b45=box
 ~|~frmDowntime.navActiveWorkOrders=button
 ~|~frmViewAwaitingWO.CopyHBox043a43f721e3f44=box
 ~|~frmDowntime.CopyLabel0b1d9abb0f3424a=label
@@ -91,6 +89,7 @@
 ~|~frmApprovalWOList.navMoreInfo=button
 ~|~popupSubEquipment.CopyButton0ef405a91a9fa45=button
 ~|~popChangeWOStatus.CopyLabel0ed6873da74f04c=label
+~|~frmActiveWOList.btnDueDateFilter=button
 ~|~frmCreateWO.Label0aca6fe3597e941=label
 ~|~frmApprovalWOList.navDowntime=button
 ~|~frmViewActiveWO.CopyHBox068511e508f094c=box
@@ -126,6 +125,7 @@
 ~|~frmCreateWO.hboxProblemCode=box
 ~|~frmEditActiveWO.CopyHBoxproblemCode0bd30cdde1ba740=box
 ~|~frmEditActiveWO.CopyLabel017435858ee574e=label
+~|~popLocationFilter=popup
 ~|~frmViewActiveWO.CopyLabel0783a75e697474d=label
 ~|~frmCreateWO.CopyHBoxproblemCode0250d62d0c60b47=box
 ~|~frmCreateWO.hboxAfterTheFactSwitch=box
@@ -137,7 +137,6 @@
 ~|~frmValveInspection.CopyTextField0cf856c2e055e46=textbox2
 ~|~frmValveInspection.CopyHBox000071a938b4f4d=box
 ~|~frmActiveWOList.Label058bff9804f4f45=label
-~|~frmLongdesc.CopyButton0f2d885d0009140=button
 ~|~frmCreateWO.hboxWorkSubtype=box
 ~|~popChangeWOStatus.Button0ee1a260287f842=button
 ~|~popupSubEquipment.CopyhbxSelectedSite0bead52ee20a34c=box
@@ -226,6 +225,7 @@
 ~|~frmMainMenu.navAwaitingApproval=button
 ~|~frmViewAwaitingWO.CopyHBox0d136eb55c4b64c=box
 ~|~popupFacSubsys.CopyhbxSelectedSite04b47cc184f334e=box
+~|~popLongdesc.HBox0dc09f522190444=box
 ~|~frmValveInspection.CopyHBoxproblemCode0060ec53c793c46=box
 ~|~frmValveInspection.CopyLabel08ffa363d9fc546=label
 ~|~frmValveInspection.CopyLabel0c76380b0944543=label
@@ -234,7 +234,6 @@
 ~|~frmEditActiveWO.CopyHBoxproblemCode07907a4075bf645=box
 ~|~popupGGS.CopyLabel0883f05b779ee4b=label
 ~|~popupGGS=popup
-~|~frmActiveWOList.Image0be0f54a4204d4b=image2
 ~|~popChangeWOStatus.cbxCauseCode=combobox
 ~|~frmViewActiveWO.txtWorkDuration=textbox2
 ~|~popupInstrument.CopyLabel0927d495283204c=label
@@ -256,7 +255,6 @@
 ~|~frmValveInspection.CopyHBox04348cff9abdf4b=box
 ~|~popupEquipment.CopyhbxSelectedSite07c129eabf2034e=box
 ~|~frmViewActiveWO.vboxNav=box
-~|~frmActiveWOList.Image084037e03ded841=image2
 ~|~frmValveInspection.VBox0ce3a326052c948=box
 ~|~frmViewAwaitingWO.HBox063dff2d238b340=box
 ~|~frmMainMenu.navMoreInfo=button
@@ -289,6 +287,7 @@
 ~|~frmMoreInfoList.hboxMain=box
 ~|~popupSubEquipment.CopyhbxSelectedSite0f4cd88ec9aeb42=box
 ~|~frmDowntime.CopyComboBox016d1a42b6bde43=combobox
+~|~popLongdesc=popup
 ~|~frmViewActiveWO.hboxMain=box
 ~|~frmViewMoreInfo.navDowntime=button
 ~|~frmValveInspection=form2
@@ -297,8 +296,8 @@
 ~|~popupInstrument.CopyLabel028a055476d8043=label
 ~|~frmDowntime.CopyComboBox0ca55874d262141=combobox
 ~|~frmCreateWO.ComboBox0062ed8347b8446=combobox
+~|~frmActiveWOList.btnPriorityFilter=button
 ~|~popupInstrument.Button046ec36f894e941=button
-~|~frmLongdesc.HBox0dc09f522190444=box
 ~|~popupArea.CopyhbxSelectedArea07dc2eff816504d=box
 ~|~frmDowntime.navAwaitingApproval=button
 ~|~frmCreateWO.Label03e6fb1d37b3342=label
@@ -325,6 +324,7 @@
 ~|~popupGGS.CopyLabel0906a710f23404d=label
 ~|~frmCreateWO.CopyComboBox044e2ed2adaa347=combobox
 ~|~frmViewActiveWO.CopyHBox08795aff42c2347=box
+~|~popLongdesc.Label0b2456e8425e14c=label
 ~|~frmViewActiveWO.Button08d29ce5c44a44b=button
 ~|~frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 ~|~popupArea.CopyHBox03c50b568f6cf4d=box
@@ -350,6 +350,7 @@
 ~|~frmDowntime.CopyLabel01f62ce85e2914f=label
 ~|~frmMoreInfoList=form2
 ~|~frmViewActiveWO.VBox08a3358600dc841=box
+~|~popLongdesc.CopyButton0f2d885d0009140=button
 ~|~popWOApproval.CopytxtComment0f1009f615f5e46=textarea2
 ~|~frmViewMoreInfo.vboxNav=box
 ~|~frmDowntime.CopyLabel02c96feb07aba4f=label
@@ -420,7 +421,6 @@
 ~|~frmValveInspection.CopyTextField0ef96ea43eb0249=textbox2
 ~|~popupFacSubsys.CopyLabel0927e5d86ca0c4a=label
 ~|~frmCreateWO.cbxWorkCategory=combobox
-~|~frmLongdesc.Label0b2456e8425e14c=label
 ~|~frmDowntime.Button05f3f42155ca948=button
 ~|~frmEditActiveWO.CopyLabel0606f8d47cfa740=label
 ~|~frmCreateWO.txtTitle=textbox2
@@ -440,6 +440,7 @@
 ~|~frmCreateWO.Label0d28fb78c50c74e=label
 ~|~frmMainMenu.HBox02a622e1fa48a45=box
 ~|~HBox05936750fff9f49=box
+~|~popDueDateFilter=popup
 ~|~frmViewActiveWO=form2
 ~|~frmCreateWO.hboxPriority=box
 ~|~frmValveInspection.CopyLabel01c6bb54d8d1941=label
@@ -458,7 +459,6 @@
 ~|~frmDowntime.navMoreInfo=button
 ~|~popupGGS.CopyhbxSelectedSite02e5098e958a14d=box
 ~|~popupFacSubsys.CopyhbxSelectedArea0bff36d5ae3354a=box
-~|~frmLongdesc.Button02f2cf6b23b9d4d=button
 ~|~frmValveInspection.CopyComboBox0efc3eb6e6b7049=combobox
 ~|~popupInstrument.CopyhbxSelectedSite05b6e98d803574b=box
 ~|~frmEditActiveWO.CopyLabel08e13c98c0c2c44=label
@@ -467,7 +467,6 @@
 ~|~frmApprovalWOList.vboxNav=box
 ~|~frmCreateWO.CopyLabel04c54fb2075b049=label
 ~|~popupEquipment.CopyLabel0049df3341c254b=label
-~|~frmLongdesc=popup
 ~|~frmValveInspection.TextArea082feb7e2aedf4b=textarea2
 ~|~frmViewAwaitingWO.CopyHBox0611ef625d1b346=box
 ~|~popAttachments.CopyButton08b2f6dc0164346=button
@@ -478,7 +477,6 @@
 ~|~popTimePicker.CopyButton0d1454a321f8845=button
 ~|~frmCreateWO.cbxWorkSubcategory=combobox
 ~|~frmEditActiveWO.CopyVBox0e2dfec9a5dbb41=box
-~|~frmLongdesc.TextArea0309738acc7bb42=textarea2
 ~|~popupFacSystem.CopyhbxSelectedSite06fe554dd85f942=box
 ~|~popupGGS.CopyButton05b86474a8d924e=button
 ~|~frmActiveWOList.hboxMain=box
@@ -491,6 +489,7 @@
 ~|~frmCreateWO.CopyLabel0df4ce4c5db2440=label
 ~|~frmMoreInfoList.navActiveWorkOrders=button
 ~|~frmEditActiveWO.CopyHBox0c97e7ed444a243=box
+~|~popPriorityFilter=popup
 ~|~popAttachments.HBox0bf1bab1918e642=box
 ~|~frmCreateWO.hboxAsset=box
 ~|~popupInstrument.CopyhbxSelectedSite08aa7e0ae21cb44=box
@@ -503,15 +502,18 @@
 ~|~frmViewAwaitingWO.CopyLabel09a8442b12ca94c=label
 ~|~frmValveInspection.Switch0974badc4c0be4d=switch
 ~|~popChangeWOStatus.Button03028c36ed0fb44=button
+~|~frmActiveWOList.btnLocationFilter=button
 ~|~frmDowntime.navCreateWorkOrder=button
 ~|~popupFacSystem.CopyLabel0c565109fad2442=label
 ~|~frmMoreInfoList.Segment06653d08601054e=segment2
 ~|~frmEditActiveWO.navAwaitingApproval=button
+~|~popLongdesc.VBox049a8fca94aba47=box
 ~|~frmValveInspection.CopyLabel044b12f557bcf46=label
 ~|~frmValveInspection.CopyComboBox0f2eeb744183b4a=combobox
 ~|~popupInstrument.CopyLabel0304513b4bd164c=label
 ~|~frmDowntime.CopyLabel09cb1d3e97e584b=label
 ~|~frmDowntime.CopyButton0026074a9ed2447=button
+~|~popLongdesc.Button02f2cf6b23b9d4d=button
 ~|~frmDowntime.CopyHBoxproblemCode07c4f8d8eae124a=box
 ~|~frmActiveWOList.vboxNav=box
 ~|~popupFacSubsys.CopyLabel02f792ddfb81749=label
@@ -536,6 +538,7 @@
 ~|~popupSubEquipment.CopyhbxSelectedSite0192113b2080f49=box
 ~|~popupFacility=popup
 ~|~popupSubEquipment=popup
+~|~popLongdesc.TextArea0309738acc7bb42=textarea2
 ~|~frmDowntime.VBox0a71adbbfd3494c=box
 ~|~popupSubEquipment.CopyhbxSelectedSite058fcb4d524184a=box
 ~|~frmViewAwaitingWO.CopyButton0b723d5d72fad4b=button
@@ -556,7 +559,6 @@
 ~|~frmDowntime.CopyHBoxproblemCode0049cfc02e4d849=box
 ~|~popupEquipment=popup
 ~|~frmViewActiveWO.CopyLabel0d3e7dedc7fef4d=label
-~|~frmActiveWOList.Image010e1e6665fa946=image2
 ~|~popChangeWOStatus.HBox0be54fb10f7f545=box
 ~|~frmValveInspection.CopyLabel08ab41f1ac8044b=label
 ~|~frmViewActiveWO.CopyButton016b755f7107648=button
@@ -566,13 +568,13 @@
 ~|~popWOApproval.CopyRadioButtonGroup04790a00f681f48=radiobuttongroup
 ~|~frmApprovalWOList.navAwaitingApproval=button
 ~|~frmCreateWO.hboxTitle=box
+~|~popLongdesc.HBox02b07e2e0911b45=box
 ~|~popupFacility.CopyButton0290c7985b90144=button
 ~|~popupSubEquipment.CopyhbxSelectedSite0e431b69d121343=box
 ~|~frmEditActiveWO.vboxNav=box
 ~|~frmEditActiveWO.CopyLabel0e6b4ba6a0c7b42=label
 ~|~popupInstrument.CopyhbxSelectedSite00e661e63101d42=box
 ~|~frmMainMenu.vboxNav=box
-~|~frmLongdesc.VBox049a8fca94aba47=box
 ~|~frmViewAwaitingWO.CopyHBox08b4357c544c342=box
 ~|~popupFacSystem.CopyhbxSelectedSite0af1187eedf7944=box
 ~|~frmValveInspection.CopyHBox0ba7f6079ac4341=box
