--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,5 +1,5 @@
 #
-#Thu May 22 16:45:52 EDT 2014
+#Thu May 22 18:26:15 EDT 2014
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$popupFacSystem.CopyButton05c72f1e8858f40=button
 tablet$0$frmApprovalWOList.navDowntime=button
@@ -31,6 +31,7 @@ tablet$0$frmEditActiveWO.CopyButtonScanbarcode04465f98f4f8c40=button
 tablet$0$popupFacSubsys=popup
 tablet$0$frmViewActiveWO.CopyHBox02c4896e022d34e=box
 tablet$0$frmDowntime.CopyLabel01f62ce85e2914f=label
+tablet$0$popLongdesc.VBox049a8fca94aba47=box
 tablet$0$frmActiveWOList.HBox05c37b97b56e248=box
 tablet$0$frmDowntime.CopyLabel02c96feb07aba4f=label
 tablet$0$frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
@@ -107,6 +108,7 @@ tablet$0$frmViewActiveWO.CopyHBox09e4d4dcb317f47=box
 tablet$0$frmMainMenu.navDowntime=button
 tablet$0$frmValveInspection.CopyLabel08ffa363d9fc546=label
 tablet$0$frmDowntime.CopyLabel09cb1d3e97e584b=label
+tablet$0$frmActiveWOList.btnLocationFilter=button
 tablet$0$frmApprovalWOList.navActiveWorkOrders=button
 tablet$0$frmViewActiveWO.CopyLabel0d3e7dedc7fef4d=label
 tablet$0$popupFacility.CopyLabel04fbe6ca6263849=label
@@ -138,7 +140,6 @@ tablet$0$popupInstrument.CopyLabel0d8358e8536fb4d=label
 tablet$0$frmViewActiveWO.CopyLabel049e0403d6ac747=label
 tablet$0$frmViewActiveWO.CopyHBox0347de8a4cc4e4c=box
 tablet$0$popChangeWOStatus.txtComment=textarea2
-tablet$0$frmLongdesc.TextArea0309738acc7bb42=textarea2
 tablet$0$popAttachments.VBox0a610f2a352e645=box
 tablet$0$frmViewAwaitingWO.CopyHBox0620cdd4316d042=box
 tablet$0$popupInstrument.CopyLabel079d72d55877849=label
@@ -150,8 +151,8 @@ tablet$0$frmMainMenu=form2
 tablet$0$frmCreateWO.CopyLabel04c54fb2075b049=label
 tablet$0$frmDowntime.navActiveWorkOrders=button
 tablet$0$frmEditActiveWO.CopyLabel06d31378aace348=label
-tablet$0$frmLongdesc.Button02f2cf6b23b9d4d=button
 tablet$0$frmViewActiveWO.CopyHBox07b6c0248cb0247=box
+tablet$0$popLongdesc.CopyButton0f2d885d0009140=button
 tablet$0$frmCreateWO.hboxProblemCode=box
 tablet$0$popupGGS.CopyButton0f561e1d9072c42=button
 tablet$0$frmMoreInfoList.navActiveWorkOrders=button
@@ -172,6 +173,7 @@ tablet$0$frmCreateWO.CopyComboBox044e2ed2adaa347=combobox
 tablet$0$popupSubEquipment.CopyhbxSelectedSite058fcb4d524184a=box
 tablet$0$frmCreateWO.navActiveWorkOrders=button
 tablet$0$popupArea.CopyLabel0dab0ffa8d1db45=label
+tablet$0$popLongdesc.HBox02b07e2e0911b45=box
 tablet$0$frmCreateWO.CopyLabel0df4ce4c5db2440=label
 tablet$0$frmViewActiveWO.navActiveWorkOrders=button
 tablet$0$frmValveInspection.CopyHBox04348cff9abdf4b=box
@@ -181,7 +183,6 @@ tablet$0$frmCreateWO.Label07311667907d440=label
 tablet$0$frmValveInspection.CopyHBox04af345a7673e49=box
 tablet$0$popupArea.CopyhbxSelectedSite0cb43e78ef88b4f=box
 tablet$0$frmDowntime.CopyHBoxproblemCode06373760f48384a=box
-tablet$0$frmLongdesc.VBox049a8fca94aba47=box
 tablet$0$frmCreateWO.CopyLabel0231d0ce05c444c=label
 tablet$0$frmValveInspection.CopyHBoxproblemCode007f91ffe198846=box
 tablet$0$frmValveInspection.CopyHBox0440937294c5847=box
@@ -189,9 +190,11 @@ tablet$0$frmViewAwaitingWO.CopyLabel098b20d3da7094d=label
 tablet$0$frmMainMenu.navMoreInfo=button
 tablet$0$frmViewActiveWO.CopyHBox02268996263ad43=box
 tablet$0$frmValveInspection.CopyLabel006a0caa30f0040=label
+tablet$0$popLongdesc.TextArea0309738acc7bb42=textarea2
 tablet$0$frmValveInspection.CopyLabel011d19559ba1048=label
 tablet$0$frmDowntime.HBox0c75f81874c1f42=box
 tablet$0$frmCreateWO.Label0aca6fe3597e941=label
+tablet$0$frmActiveWOList.btnDueDateFilter=button
 tablet$0$frmMoreInfoList.hboxMain=box
 tablet$0$frmEditActiveWO.CopyLabel05f17e1d5648a4d=label
 tablet$0$frmViewMoreInfo.vboxNav=box
@@ -203,9 +206,11 @@ tablet$0$frmViewActiveWO.hboxMain=box
 tablet$0$frmViewAwaitingWO.CopyButton06217ec4133174a=button
 tablet$0$popupSubEquipment.CopyLabel0a563bd232a7b47=label
 tablet$0$popupFacSubsys.CopyLabel0317dea268a9842=label
+tablet$0$popLongdesc.Button02f2cf6b23b9d4d=button
 tablet$0$popupEquipment.CopyButton03dcd1d3df30740=button
 tablet$0$popWOApproval.CopyButton03700868ebd3c4f=button
 tablet$0$popupInstrument.HBox00ec5efe5e8704a=box
+tablet$0$popLongdesc=popup
 tablet$0$popupArea.CopyhbxSelectedArea07dc2eff816504d=box
 tablet$0$popChangeWOStatus.HBox0a4ec2ca4e08040=box
 tablet$0$popupSite.CopyButton0373777d2b4ed48=button
@@ -231,9 +236,7 @@ tablet$0$frmValveInspection.CopyComboBox0988e7ee327ae40=combobox
 tablet$0$frmValveInspection.CopyLabel01c6bb54d8d1941=label
 tablet$0$frmViewActiveWO.CopyHBox01c5f3074c60f46=box
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode092079a6a536a4e=box
-tablet$0$frmLongdesc.HBox02b07e2e0911b45=box
 tablet$0$popTimePicker.CopyLabel0bc3ac36c30f842=label
-tablet$0$frmActiveWOList.Image010e1e6665fa946=image2
 tablet$0$frmEditActiveWO.CopyLabel0b49c2022ced747=label
 tablet$0$frmCreateWO.txtTitle=textbox2
 tablet$0$popTimePicker.CopyHBox087eed2ceed8d4a=box
@@ -266,6 +269,7 @@ tablet$0$frmViewMoreInfo.CopyVBox0e0301e03413642=box
 tablet$0$frmViewActiveWO.CopyLabel0783a75e697474d=label
 tablet$0$popAttachments.Label00ce247c1b5bc44=label
 tablet$0$popupFacSubsys.CopyButton0cf138484de6e4e=button
+tablet$0$popDueDateFilter=popup
 tablet$0$popupSite.CopyhbxSelectedSite0695b7a40d31e40=box
 tablet$0$frmCreateWO.CopyComboBox066b2a180a53c42=combobox
 tablet$0$frmValveInspection.CopyLabel0b2416cfad20d4e=label
@@ -281,6 +285,7 @@ tablet$0$popupFacSystem.CopyhbxSelectedSite0af1187eedf7944=box
 tablet$0$popupInstrument.Button09ef9222c9d0a4f=button
 tablet$0$frmViewMoreInfo.navCreateWorkOrder=button
 tablet$0$popupInstrument.CopyLabel06bd7446b1e3448=label
+tablet$0$popPriorityFilter=popup
 tablet$0$frmCreateWO.VBox0ae5e302cb95148=box
 tablet$0$frmValveInspection.CopyLabel044b12f557bcf46=label
 tablet$0$frmCreateWO.hboxAsset=box
@@ -375,7 +380,6 @@ tablet$0$popTimePicker.CopyVBox0d3418e71737442=box
 tablet$0$frmViewMoreInfo=form2
 tablet$0$popupInstrument.CopyhbxSelectedSite00e661e63101d42=box
 tablet$0$frmValveInspection.TextArea082feb7e2aedf4b=textarea2
-tablet$0$frmLongdesc=popup
 tablet$0$frmEditActiveWO.navMoreInfo=button
 tablet$0$frmActiveWOList.hboxMain=box
 tablet$0$frmEditActiveWO.navDowntime=button
@@ -401,9 +405,11 @@ tablet$0$frmEditActiveWO.navActiveWorkOrders=button
 tablet$0$popupEquipment.CopyhbxSelectedSite0f15fce31695a4a=box
 tablet$0$frmViewAwaitingWO.Label027fba225f4ab44=label
 tablet$0$popupSubEquipment.CopyhbxSelectedArea0668b90fdf3b643=box
+tablet$0$popLongdesc.Label0b2456e8425e14c=label
 tablet$0$frmMainMenu.Label09e53b932632649=label
 tablet$0$frmMainMenu.navAwaitingApproval=button
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode053448eb49a624b=box
+tablet$0$popLongdesc.HBox0dc09f522190444=box
 tablet$0$frmViewAwaitingWO.CopyLabel09a8442b12ca94c=label
 tablet$0$popupInstrument.CopyLabel028a055476d8043=label
 tablet$0$frmCreateWO.navAwaitingApproval=button
@@ -419,13 +425,11 @@ tablet$0$frmViewAwaitingWO.vboxNav=box
 tablet$0$popWOApproval.CopyLabel04ae75e29081046=label
 tablet$0$popupArea.CopyButton028570489d35040=button
 tablet$0$popChangeWOStatus.CopyLabel0e3acf65ae3d946=label
-tablet$0$frmActiveWOList.Image084037e03ded841=image2
 tablet$0$frmValveInspection.CopyLabel0838d9a65e2e94f=label
 tablet$0$popupEquipment.CopyButton0b6657dbb10e44c=button
 tablet$0$popupEquipment.CopyhbxSelectedSite07a64c695009b4f=box
 tablet$0$frmCreateWO.hboxRemedyCode=box
 tablet$0$popChangeWOStatus.HBox0f3bf256b7d1c47=box
-tablet$0$frmLongdesc.Label0b2456e8425e14c=label
 tablet$0$frmEditActiveWO.CopyLabel0c49c8e9600ed4f=label
 tablet$0$frmViewActiveWO.CopyButton016b755f7107648=button
 tablet$0$popupSubEquipment.CopyhbxSelectedSite0b0b2cf00bbea48=box
@@ -465,6 +469,7 @@ tablet$0$popupSite.CopyhbxSelectedSite03faf6c9ff23c45=box
 tablet$0$popChangeWOStatus.cbxRemedyCode=combobox
 tablet$0$frmViewActiveWO.CopyLabel0b3fdd781891947=label
 tablet$0$popupGGS=popup
+tablet$0$frmActiveWOList.btnPriorityFilter=button
 tablet$0$frmViewAwaitingWO.navAwaitingApproval=button
 tablet$0$frmCreateWO.CopyLabel02578201702ac4a=label
 tablet$0$frmDowntime.Label0cb58afb2d3654f=label
@@ -472,7 +477,6 @@ tablet$0$popupFacility.CopyLabel06bf7d9ba77e841=label
 tablet$0$frmValveInspection.CopyTextField0becb3bc1c46946=textbox2
 tablet$0$popupSubEquipment.CopyHBox0d6db1fa1345943=box
 tablet$0$popAttachments=popup
-tablet$0$frmLongdesc.HBox0dc09f522190444=box
 tablet$0$popChangeWOStatus.Button0ee1a260287f842=button
 tablet$0$popupArea.CopyLabel0434dc119cd4b48=label
 tablet$0$popWOApproval=popup
@@ -491,18 +495,17 @@ tablet$0$frmEditActiveWO.vboxNav=box
 tablet$0$frmValveInspection.CopyHBoxproblemCode03741490f3e2244=box
 tablet$0$popWOApproval.CopyLabel03190e30a9e724f=label
 tablet$0$frmEditActiveWO.CopyLabel0153b3fa9cb4742=label
-tablet$0$frmActiveWOList.Image0be0f54a4204d4b=image2
 tablet$0$frmCreateWO.hboxDescription=box
 tablet$0$popupFacSubsys.CopyhbxSelectedSite0d7502134fc0241=box
 tablet$0$popupFacility.CopyLabel0f94c0f0c70304a=label
 tablet$0$frmCreateWO.navMoreInfo=button
 tablet$0$popupGGS.CopyLabel0883f05b779ee4b=label
 tablet$0$frmViewActiveWO.CopyLabel031f28d49ab994e=label
+tablet$0$popLocationFilter=popup
 tablet$0$frmViewAwaitingWO.CopyLabel00e429794d33c49=label
 tablet$0$popupSubEquipment.CopyhbxSelectedSite0f4cd88ec9aeb42=box
 tablet$0$frmCreateWO.navDowntime=button
 tablet$0$frmViewAwaitingWO.CopyHBox043a43f721e3f44=box
-tablet$0$frmViewMoreInfo.CopySegment06d36cd0777dd4f=segment2
 tablet$0$frmMoreInfoList.CopyVBox05c46e1637ddc4d=box
 tablet$0$frmDowntime.CopyComboBox0c4d3e9e37f1c49=combobox
 tablet$0$frmCreateWO.CopyLabel0e3617d6326f84b=label
@@ -513,7 +516,6 @@ tablet$0$frmCreateWO.CopyHBoxproblemCode0250d62d0c60b47=box
 tablet$0$popupFacSystem.CopyhbxSelectedSite0675e4a635f8e47=box
 tablet$0$popChangeWOStatus.CopyLabel0c6177723e9dd4a=label
 tablet$0$frmViewActiveWO.navAwaitingApproval=button
-tablet$0$frmLongdesc.CopyButton0f2d885d0009140=button
 tablet$0$frmViewAwaitingWO.CopyLabel0933d517e58f64b=label
 tablet$0$popupFacility.CopyLabel079f089a6f5cc4a=label
 tablet$0$popupArea.CopyhbxSelectedArea009b68bd9620740=box
