Mostly finished with Visualizer "recovery" with the exception of the Location/Asset hierarchy navigator.

--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,7 +1,9 @@
 #
-#Thu May 22 18:26:15 EDT 2014
+#Thu May 22 19:09:17 EDT 2014
+tablet$0$frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$popupFacSystem.CopyButton05c72f1e8858f40=button
+tablet$0$frmViewMoreInfo.CopyHBox0620cdd4316d042=box
 tablet$0$frmApprovalWOList.navDowntime=button
 tablet$0$popChangeWOStatus=popup
 tablet$0$frmViewActiveWO.CopyHBox05b1a6322d91c4d=box
@@ -12,6 +14,7 @@ tablet$0$popChangeWOStatus.HBox062dc4158474f4c=box
 tablet$0$popupSubEquipment.CopyLabel0d82e2db3e9f74a=label
 tablet$0$popChangeWOStatus.CopyLabel0ed6873da74f04c=label
 tablet$0$popupFacSubsys.CopyLabel05954a74c82294a=label
+tablet$0$frmViewMoreInfo.txtarMoreInfo=textarea2
 tablet$0$frmViewActiveWO.HBox087a589b4e64d49=box
 tablet$0$popupArea.CopyHBox03c50b568f6cf4d=box
 tablet$0$frmViewActiveWO.VBox08a3358600dc841=box
@@ -23,8 +26,10 @@ tablet$0$frmEditActiveWO.CopyLabel08e13c98c0c2c44=label
 tablet$0$frmValveInspection.CopyLabel0c76380b0944543=label
 tablet$0$popAttachments.CopyButton08b2f6dc0164346=button
 tablet$0$popupFacSubsys.CopyHBox055ca4f294ed649=box
+tablet$0$frmViewMoreInfo.Label027fba225f4ab44=label
 tablet$0$frmCreateWO.CopyLabel01313c791ff954c=label
 tablet$0$popupFacSystem.CopyLabel0a9b6774f91af40=label
+tablet$0$popDueDateFilter.hbox1568159912380697=box
 tablet$0$frmValveInspection.CopyButton0226a251a7d2f45=button
 tablet$0$popTimePicker.CopyHBox09052f03a32d945=box
 tablet$0$frmEditActiveWO.CopyButtonScanbarcode04465f98f4f8c40=button
@@ -33,6 +38,7 @@ tablet$0$frmViewActiveWO.CopyHBox02c4896e022d34e=box
 tablet$0$frmDowntime.CopyLabel01f62ce85e2914f=label
 tablet$0$popLongdesc.VBox049a8fca94aba47=box
 tablet$0$frmActiveWOList.HBox05c37b97b56e248=box
+tablet$0$frmViewMoreInfo.CopyLabel098b20d3da7094d=label
 tablet$0$frmDowntime.CopyLabel02c96feb07aba4f=label
 tablet$0$frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 tablet$0$frmValveInspection.CopyLabel0faac95a083c447=label
@@ -42,6 +48,7 @@ tablet$0$frmViewActiveWO=form2
 tablet$0$popupInstrument.CopyhbxSelectedSite044ea2f0a40744f=box
 tablet$0$frmDowntime.CopyComboBox016d1a42b6bde43=combobox
 tablet$0$popupEquipment.CopyhbxSelectedSite093410928f2d44f=box
+tablet$0$popPriorityFilter.label1568159912380696=label
 tablet$0$frmViewAwaitingWO.CopyVBox01592c7d4a4794b=box
 tablet$0$popAttachments.HBox03a58a73124034d=box
 tablet$0$frmDowntime.CopyLabel093a87ec2048442=label
@@ -79,6 +86,7 @@ tablet$0$frmValveInspection.Button03a4b925a66854f=button
 tablet$0$frmMainMenu.hboxMain=box
 tablet$0$popupFacility.CopyhbxSelectedSite0aa642f6cad4048=box
 tablet$0$popupInstrument.CopyLabel04978c808a0c34e=label
+tablet$0$frmViewMoreInfo.CopyLabel0f880717279644d=label
 tablet$0$hdrEdit=header
 tablet$0$frmMainMenu.navActiveWorkOrders=button
 tablet$0$frmDowntime.ComboBox01868aea2e88547=combobox
@@ -89,8 +97,8 @@ tablet$0$popupSubEquipment.CopyLabel0ac66e61b1efc4e=label
 tablet$0$frmValveInspection.CopyTextField0172af93a903d4b=textbox2
 tablet$0$frmValveInspection.CopyHBox0c8e31857ed904e=box
 tablet$0$frmViewAwaitingWO.CopyLabel041c1b738c2ad44=label
-tablet$0$popupInstrument.Button046ec36f894e941=button
 tablet$0$frmViewActiveWO.CopyLabel0e3b6b4c1993c4f=label
+tablet$0$popupInstrument.Button046ec36f894e941=button
 tablet$0$frmCreateWO.vboxNav=box
 tablet$0$popAttachments.HBox024685c11b3444c=box
 tablet$0$frmActiveWOList=form2
@@ -105,7 +113,9 @@ tablet$0$frmValveInspection.CopyHBoxproblemCode09f431432eb0743=box
 tablet$0$frmCreateWO.Label0d3fcbef3ee8f45=label
 tablet$0$frmViewActiveWO.vboxNav=box
 tablet$0$frmViewActiveWO.CopyHBox09e4d4dcb317f47=box
+tablet$0$popLocationFilter.CopyButton0d1454a321f8845=button
 tablet$0$frmMainMenu.navDowntime=button
+tablet$0$frmViewMoreInfo.CopyHBox01dce313e08ef4b=box
 tablet$0$frmValveInspection.CopyLabel08ffa363d9fc546=label
 tablet$0$frmDowntime.CopyLabel09cb1d3e97e584b=label
 tablet$0$frmActiveWOList.btnLocationFilter=button
@@ -128,13 +138,14 @@ tablet$0$frmMoreInfoList.navMoreInfo=button
 tablet$0$frmEditActiveWO.CopyLabel0e6b4ba6a0c7b42=label
 tablet$0$HBox05936750fff9f49=box
 tablet$0$frmMoreInfoList.navDowntime=button
-tablet$0$popupFacSubsys.CopyLabel0bba38b1a19ba4d=label
 tablet$0$frmMoreInfoList.vboxNav=box
+tablet$0$popupFacSubsys.CopyLabel0bba38b1a19ba4d=label
 tablet$0$frmMainMenu.navCreateWorkOrder=button
 tablet$0$frmValveInspection.CopyComboBox04f7c574a7dcd44=combobox
 tablet$0$popWOApproval.CopyHBox0f5f643c2300348=box
 tablet$0$frmActiveWOList.lblPriorityFilter=label
 tablet$0$frmViewAwaitingWO.CopyHBox08f44f5d749384d=box
+tablet$0$frmViewMoreInfo.HBox063dff2d238b340=box
 tablet$0$popupInstrument.CopyLabel0fcc56a69114040=label
 tablet$0$popupInstrument.CopyLabel0d8358e8536fb4d=label
 tablet$0$frmViewActiveWO.CopyLabel049e0403d6ac747=label
@@ -144,6 +155,7 @@ tablet$0$popAttachments.VBox0a610f2a352e645=box
 tablet$0$frmViewAwaitingWO.CopyHBox0620cdd4316d042=box
 tablet$0$popupInstrument.CopyLabel079d72d55877849=label
 tablet$0$popWOApproval.CopytxtComment0f1009f615f5e46=textarea2
+tablet$0$popDueDateFilter.CopyButton0d1454a321f8845=button
 tablet$0$frmApprovalWOList.CopyVBox0e0301e03413642=box
 tablet$0$frmCreateWO.navCreateWorkOrder=button
 tablet$0$frmViewAwaitingWO.CopyLabel047f5f421bd714c=label
@@ -151,9 +163,11 @@ tablet$0$frmMainMenu=form2
 tablet$0$frmCreateWO.CopyLabel04c54fb2075b049=label
 tablet$0$frmDowntime.navActiveWorkOrders=button
 tablet$0$frmEditActiveWO.CopyLabel06d31378aace348=label
-tablet$0$frmViewActiveWO.CopyHBox07b6c0248cb0247=box
 tablet$0$popLongdesc.CopyButton0f2d885d0009140=button
+tablet$0$frmViewActiveWO.CopyHBox07b6c0248cb0247=box
 tablet$0$frmCreateWO.hboxProblemCode=box
+tablet$0$popDueDateFilter.label1568159912380696=label
+tablet$0$popLocationFilter.label1568159912388250=label
 tablet$0$popupGGS.CopyButton0f561e1d9072c42=button
 tablet$0$frmMoreInfoList.navActiveWorkOrders=button
 tablet$0$frmViewActiveWO.CopyLabel04b6703bba78b4f=label
@@ -179,6 +193,7 @@ tablet$0$frmViewActiveWO.navActiveWorkOrders=button
 tablet$0$frmValveInspection.CopyHBox04348cff9abdf4b=box
 tablet$0$popupSubEquipment.CopyButton0bff0799a297747=button
 tablet$0$frmActiveWOList.lblDueDateFilter=label
+tablet$0$frmViewMoreInfo.CopyLabel0a085706adae14a=label
 tablet$0$frmCreateWO.Label07311667907d440=label
 tablet$0$frmValveInspection.CopyHBox04af345a7673e49=box
 tablet$0$popupArea.CopyhbxSelectedSite0cb43e78ef88b4f=box
@@ -192,6 +207,7 @@ tablet$0$frmViewActiveWO.CopyHBox02268996263ad43=box
 tablet$0$frmValveInspection.CopyLabel006a0caa30f0040=label
 tablet$0$popLongdesc.TextArea0309738acc7bb42=textarea2
 tablet$0$frmValveInspection.CopyLabel011d19559ba1048=label
+tablet$0$frmViewMoreInfo.CopyLabel09a8442b12ca94c=label
 tablet$0$frmDowntime.HBox0c75f81874c1f42=box
 tablet$0$frmCreateWO.Label0aca6fe3597e941=label
 tablet$0$frmActiveWOList.btnDueDateFilter=button
@@ -207,18 +223,20 @@ tablet$0$frmViewAwaitingWO.CopyButton06217ec4133174a=button
 tablet$0$popupSubEquipment.CopyLabel0a563bd232a7b47=label
 tablet$0$popupFacSubsys.CopyLabel0317dea268a9842=label
 tablet$0$popLongdesc.Button02f2cf6b23b9d4d=button
+tablet$0$frmViewMoreInfo.CopyHBox0611ef625d1b346=box
 tablet$0$popupEquipment.CopyButton03dcd1d3df30740=button
 tablet$0$popWOApproval.CopyButton03700868ebd3c4f=button
-tablet$0$popupInstrument.HBox00ec5efe5e8704a=box
 tablet$0$popLongdesc=popup
+tablet$0$popupInstrument.HBox00ec5efe5e8704a=box
+tablet$0$popDueDateFilter.CopyHBox087eed2ceed8d4a=box
 tablet$0$popupArea.CopyhbxSelectedArea07dc2eff816504d=box
 tablet$0$popChangeWOStatus.HBox0a4ec2ca4e08040=box
 tablet$0$popupSite.CopyButton0373777d2b4ed48=button
 tablet$0$popupSite=popup
 tablet$0$frmEditActiveWO.CopyLabel02e43cd9934c445=label
 tablet$0$popupFacSystem.CopyHBox0b8f4ae0ac61247=box
-tablet$0$frmViewAwaitingWO.CopyLabel08691d38a20c54c=label
 tablet$0$frmMoreInfoList.Segment06653d08601054e=segment2
+tablet$0$frmViewAwaitingWO.CopyLabel08691d38a20c54c=label
 tablet$0$frmViewAwaitingWO.navActiveWorkOrders=button
 tablet$0$popupArea=popup
 tablet$0$popupFacSystem.CopyLabel0ab50451d3bfe4c=label
@@ -237,6 +255,7 @@ tablet$0$frmValveInspection.CopyLabel01c6bb54d8d1941=label
 tablet$0$frmViewActiveWO.CopyHBox01c5f3074c60f46=box
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode092079a6a536a4e=box
 tablet$0$popTimePicker.CopyLabel0bc3ac36c30f842=label
+tablet$0$popPriorityFilter.label1568159912388250=label
 tablet$0$frmEditActiveWO.CopyLabel0b49c2022ced747=label
 tablet$0$frmCreateWO.txtTitle=textbox2
 tablet$0$popTimePicker.CopyHBox087eed2ceed8d4a=box
@@ -246,6 +265,7 @@ tablet$0$popupArea.CopyLabel08f87ef10511f41=label
 tablet$0$frmValveInspection.CopyLabel040a42463738d46=label
 tablet$0$frmValveInspection.CopyTextField003281708ff164e=textbox2
 tablet$0$frmDowntime.CopyLabel040b4f784ab644c=label
+tablet$0$popDueDateFilter.CopyButton0bcf4d218cf034e=button
 tablet$0$popupArea.CopyhbxSelectedArea019b16609c91c41=box
 tablet$0$frmViewAwaitingWO.navMoreInfo=button
 tablet$0$frmMainMenu.vboxNav=box
@@ -263,6 +283,7 @@ tablet$0$frmEditActiveWO.CopyButton0f8ce1e3199d448=button
 tablet$0$popupSite.CopyLabel0f5d19b04c30847=label
 tablet$0$popupFacSubsys.CopyhbxSelectedArea0bff36d5ae3354a=box
 tablet$0$popupSite.CopyButton0302e6379156b45=button
+tablet$0$frmViewMoreInfo.CopyLabel00f77a45ee9e548=label
 tablet$0$frmEditActiveWO.CopyLabel017435858ee574e=label
 tablet$0$frmValveInspection.CopyComboBox0efc3eb6e6b7049=combobox
 tablet$0$frmViewMoreInfo.CopyVBox0e0301e03413642=box
@@ -275,17 +296,22 @@ tablet$0$frmCreateWO.CopyComboBox066b2a180a53c42=combobox
 tablet$0$frmValveInspection.CopyLabel0b2416cfad20d4e=label
 tablet$0$frmValveInspection.CopyTextField0ef96ea43eb0249=textbox2
 tablet$0$popChangeWOStatus.Button03028c36ed0fb44=button
+tablet$0$frmViewMoreInfo.CopyLabel00e429794d33c49=label
 tablet$0$popupFacSubsys.CopyLabel0927e5d86ca0c4a=label
 tablet$0$popupFacSystem.CopyhbxSelectedSite06fe554dd85f942=box
 tablet$0$popupInstrument.CopyhbxSelectedSite05b6e98d803574b=box
 tablet$0$popupInstrument=popup
+tablet$0$frmViewMoreInfo.CopyLabel0933d517e58f64b=label
 tablet$0$frmCreateWO.cbxWorkSubcategory=combobox
 tablet$0$frmValveInspection.CopyLabel0516994f31fb643=label
 tablet$0$popupFacSystem.CopyhbxSelectedSite0af1187eedf7944=box
 tablet$0$popupInstrument.Button09ef9222c9d0a4f=button
+tablet$0$frmViewMoreInfo.hbox1568159912404570=box
 tablet$0$frmViewMoreInfo.navCreateWorkOrder=button
 tablet$0$popupInstrument.CopyLabel06bd7446b1e3448=label
+tablet$0$frmViewMoreInfo.label1568159912405675=label
 tablet$0$popPriorityFilter=popup
+tablet$0$popLocationFilter.CopyButton0bcf4d218cf034e=button
 tablet$0$frmCreateWO.VBox0ae5e302cb95148=box
 tablet$0$frmValveInspection.CopyLabel044b12f557bcf46=label
 tablet$0$frmCreateWO.hboxAsset=box
@@ -293,6 +319,7 @@ tablet$0$popupSubEquipment.CopyLabel073565767bf2c40=label
 tablet$0$popupEquipment.CopyhbxSelectedSite0a83de29403554e=box
 tablet$0$popupSubEquipment.CopyhbxSelectedSite0e431b69d121343=box
 tablet$0$frmMoreInfoList.navCreateWorkOrder=button
+tablet$0$frmViewMoreInfo.CopyLabel0752fd18ea8df40=label
 tablet$0$frmViewMoreInfo.navActiveWorkOrders=button
 tablet$0$popWOApproval.CopyHBox03666f20c19ed47=box
 tablet$0$frmDowntime.navMoreInfo=button
@@ -301,19 +328,22 @@ tablet$0$popupFacility=popup
 tablet$0$popupEquipment.CopyLabel0d0f63afe980441=label
 tablet$0$frmValveInspection.Button05714b209c9e646=button
 tablet$0$frmValveInspection.CopyLabel0f4a939db351742=label
+tablet$0$frmViewMoreInfo.CopyHBox08b4357c544c342=box
 tablet$0$frmDowntime.navDowntime=button
 tablet$0$frmViewActiveWO.CopyLabel08cb2e16ea0f643=label
 tablet$0$popupGGS.CopyhbxSelectedSite00eb4dd3bc5154b=box
+tablet$0$popLocationFilter.hbox1568159912380697=box
 tablet$0$frmActiveWOList.CopyVBox0b99ec925d1d34a=box
 tablet$0$frmDowntime.CopyLabel0b1d9abb0f3424a=label
 tablet$0$frmDowntime.CopyButton0026074a9ed2447=button
 tablet$0$popupInstrument.CopyLabel07f3e49de47b24f=label
 tablet$0$frmValveInspection.Button06ff7fc2a4ba74b=button
 tablet$0$frmViewMoreInfo.navMoreInfo=button
+tablet$0$popPriorityFilter.CopyButton0d1454a321f8845=button
+tablet$0$CopyHBox05ab541b50c7444=box
 tablet$0$popupInstrument.CopyhbxSelectedSite08aa7e0ae21cb44=box
 tablet$0$frmViewAwaitingWO.CopyButton0b723d5d72fad4b=button
 tablet$0$frmEditActiveWO.CopyButton0128ee35641524f=button
-tablet$0$CopyHBox05ab541b50c7444=box
 tablet$0$popupFacSubsys.CopyhbxSelectedSite07c9b2bc9e22f46=box
 tablet$0$frmDowntime.CopyHBoxproblemCode07c4f8d8eae124a=box
 tablet$0$frmViewMoreInfo.navDowntime=button
@@ -321,6 +351,7 @@ tablet$0$popupEquipment=popup
 tablet$0$frmDowntime.navCreateWorkOrder=button
 tablet$0$popupEquipment.CopyLabel0049df3341c254b=label
 tablet$0$popupFacSystem.CopyhbxSelectedSite0a41e0b9afd634e=box
+tablet$0$frmViewMoreInfo.CopyButton0a7c6edbb2be947=button
 tablet$0$popAttachments.CopyHBox022f0bb539f3443=box
 tablet$0$popupInstrument.CopyhbxSelectedSite02b11a0f7e05c4e=box
 tablet$0$popupSubEquipment=popup
@@ -331,6 +362,7 @@ tablet$0$frmViewActiveWO.CopyLabel07d69d6b7710441=label
 tablet$0$frmApprovalWOList.CopySegment06d36cd0777dd4f=segment2
 tablet$0$frmViewAwaitingWO.CopyLabel0a085706adae14a=label
 tablet$0$frmValveInspection.Button0435c6286129d44=button
+tablet$0$popPriorityFilter.hbox1568159912380697=box
 tablet$0$popupFacility.CopyButton0290c7985b90144=button
 tablet$0$popupFacSystem.CopyhbxSelectedSite0c94a8df6020145=box
 tablet$0$popupSubEquipment.CopyhbxSelectedSite03c86d4d8b8a84a=box
@@ -340,6 +372,7 @@ tablet$0$frmDowntime.CopyButton05809a09c62a643=button
 tablet$0$popAttachments.Button0dfb95bb959a149=button
 tablet$0$frmViewActiveWO.CopyLabel07f281a084e0744=label
 tablet$0$popupGGS.CopyLabel02fe4739edbd74c=label
+tablet$0$popDueDateFilter.label1568159912388250=label
 tablet$0$popupEquipment.CopyLabel027020417ad9c4f=label
 tablet$0$frmCreateWO.CopyLabel06efe9974c73144=label
 tablet$0$frmValveInspection.CopyLabel08ab41f1ac8044b=label
@@ -355,8 +388,10 @@ tablet$0$frmDowntime.CopyHBoxproblemCode0049cfc02e4d849=box
 tablet$0$frmActiveWOList.navMoreInfo=button
 tablet$0$popChangeWOStatus.HBox0be54fb10f7f545=box
 tablet$0$popupFacSubsys.CopyhbxSelectedSite01b803c3cb52349=box
+tablet$0$frmViewMoreInfo.CopyHBox043a43f721e3f44=box
 tablet$0$frmActiveWOList.navDowntime=button
 tablet$0$popupFacSystem.CopyLabel0c565109fad2442=label
+tablet$0$popLocationFilter.CopyHBox087eed2ceed8d4a=box
 tablet$0$frmViewMoreInfo.hboxMain=box
 tablet$0$frmCreateWO.ButtonScanbarcode=button
 tablet$0$frmApprovalWOList.navAwaitingApproval=button
@@ -380,6 +415,7 @@ tablet$0$popTimePicker.CopyVBox0d3418e71737442=box
 tablet$0$frmViewMoreInfo=form2
 tablet$0$popupInstrument.CopyhbxSelectedSite00e661e63101d42=box
 tablet$0$frmValveInspection.TextArea082feb7e2aedf4b=textarea2
+tablet$0$frmViewMoreInfo.CopyButton0769390d0dfe14e=button
 tablet$0$frmEditActiveWO.navMoreInfo=button
 tablet$0$frmActiveWOList.hboxMain=box
 tablet$0$frmEditActiveWO.navDowntime=button
@@ -405,6 +441,7 @@ tablet$0$frmEditActiveWO.navActiveWorkOrders=button
 tablet$0$popupEquipment.CopyhbxSelectedSite0f15fce31695a4a=box
 tablet$0$frmViewAwaitingWO.Label027fba225f4ab44=label
 tablet$0$popupSubEquipment.CopyhbxSelectedArea0668b90fdf3b643=box
+tablet$0$popPriorityFilter.CopyButton0bcf4d218cf034e=button
 tablet$0$popLongdesc.Label0b2456e8425e14c=label
 tablet$0$frmMainMenu.Label09e53b932632649=label
 tablet$0$frmMainMenu.navAwaitingApproval=button
@@ -418,6 +455,7 @@ tablet$0$popupEquipment.CopyhbxSelectedSite099f58cd5cd1146=box
 tablet$0$frmViewAwaitingWO=form2
 tablet$0$frmActiveWOList.navCreateWorkOrder=button
 tablet$0$frmViewActiveWO.txtWorkDuration=textbox2
+tablet$0$frmViewMoreInfo.CopyLabel0f2d8e5c336284d=label
 tablet$0$popupInstrument.CopyhbxSelectedSite015b13076d3434b=box
 tablet$0$popTimePicker.CopyButton0bcf4d218cf034e=button
 tablet$0$frmViewActiveWO.Label050d932913f2a40=label
@@ -466,8 +504,9 @@ tablet$0$frmEditActiveWO.CopyComboBox05611e3e70d6a47=combobox
 tablet$0$frmCreateWO.CopyButtonScanbarcode0e5c2601049354c=button
 tablet$0$frmDowntime.CopyLabel07718c2ae276c41=label
 tablet$0$popupSite.CopyhbxSelectedSite03faf6c9ff23c45=box
-tablet$0$popChangeWOStatus.cbxRemedyCode=combobox
+tablet$0$popDueDateFilter.calDueDate=calendar
 tablet$0$frmViewActiveWO.CopyLabel0b3fdd781891947=label
+tablet$0$popChangeWOStatus.cbxRemedyCode=combobox
 tablet$0$popupGGS=popup
 tablet$0$frmActiveWOList.btnPriorityFilter=button
 tablet$0$frmViewAwaitingWO.navAwaitingApproval=button
@@ -487,6 +526,7 @@ tablet$0$frmDowntime.navAwaitingApproval=button
 tablet$0$popupFacSystem.CopyLabel03cb8304f06e345=label
 tablet$0$popupInstrument.Label0bc97360a806d4d=label
 tablet$0$frmViewActiveWO.CopyButton0443fe6b1224e46=button
+tablet$0$frmViewMoreInfo.CopyLabel047f5f421bd714c=label
 tablet$0$popupFacility.CopyHBox09c3bdd4f285b41=box
 tablet$0$popupFacSystem.CopyLabel0c268c653490444=label
 tablet$0$frmValveInspection.CopyHBox0ba7f6079ac4341=box
@@ -512,6 +552,7 @@ tablet$0$frmCreateWO.CopyLabel0e3617d6326f84b=label
 tablet$0$popupGGS.CopyhbxSelectedSite0549c96d36a1343=box
 tablet$0$frmEditActiveWO.CopyComboBox0ba0a2256cbb641=combobox
 tablet$0$frmCreateWO.hboxCauseCode=box
+tablet$0$popPriorityFilter.cbxPriorityFilter=combobox
 tablet$0$frmCreateWO.CopyHBoxproblemCode0250d62d0c60b47=box
 tablet$0$popupFacSystem.CopyhbxSelectedSite0675e4a635f8e47=box
 tablet$0$popChangeWOStatus.CopyLabel0c6177723e9dd4a=label
@@ -522,6 +563,8 @@ tablet$0$popupArea.CopyhbxSelectedArea009b68bd9620740=box
 tablet$0$popupGGS.CopyButton05b86474a8d924e=button
 tablet$0$frmValveInspection.CopyHBox0f8a66579044d48=box
 tablet$0$frmDowntime.CopyHBoxproblemCode07a9f578aff6d42=box
+tablet$0$popLocationFilter.combobox1568159912394375=combobox
+tablet$0$frmViewMoreInfo.CopyLabel041c1b738c2ad44=label
 tablet$0$frmViewActiveWO.CopyLabel00d08986766644b=label
 tablet$0$frmEditActiveWO.hboxMain=box
 tablet$0$frmViewActiveWO.CopyHBox068511e508f094c=box
@@ -546,6 +589,7 @@ tablet$0$popAttachments.HBox0bf1bab1918e642=box
 tablet$0$frmValveInspection.CopyLabel074706e038d174f=label
 tablet$0$CopyHBox05ab541b50c7444.Button023759543514143=button
 tablet$0$popupEquipment.CopyLabel006f8f3d3c19548=label
+tablet$0$frmViewMoreInfo.CopyButton06217ec4133174a=button
 tablet$0$popTimePicker.CopyPickerView0140335c3acad46=pickerview
 tablet$0$frmViewActiveWO.Button0b6a1c72615e449=button
 tablet$0$frmEditActiveWO.CopyButtonScanbarcode0b62a166cd65640=button
@@ -554,6 +598,8 @@ tablet$0$popupGGS.CopyhbxSelectedArea07dba3971ff5c41=box
 tablet$0$frmViewActiveWO.CopyLabel0dc86a909f31942=label
 tablet$0$popChangeWOStatus.cbxCauseCode=combobox
 tablet$0$frmViewActiveWO.navDowntime=button
+tablet$0$frmViewMoreInfo.CopyHBox0d136eb55c4b64c=box
+tablet$0$popLocationFilter.label1568159912380696=label
 tablet$0$popupEquipment.CopyLabel095119ed0bdb74d=label
 tablet$0$frmCreateWO.Button08e5b64d51bdf48=button
 tablet$0$frmViewAwaitingWO.CopyButton0769390d0dfe14e=button
@@ -566,6 +612,7 @@ tablet$0$popupEquipment.CopyhbxSelectedSite07c129eabf2034e=box
 tablet$0$frmCreateWO=form2
 tablet$0$frmViewMoreInfo.navAwaitingApproval=button
 tablet$0$popupEquipment.CopyhbxSelectedArea0fb23f8f4fec448=box
+tablet$0$popPriorityFilter.CopyHBox087eed2ceed8d4a=box
 tablet$0$popupFacSystem.CopyLabel0a38bf8775d6e4a=label
 tablet$0$frmValveInspection.CopyLabel0cc935cec4a4f41=label
 tablet$0$frmValveInspection.CopyButton0ae6095081e3b40=button
@@ -579,3 +626,4 @@ tablet$0$frmValveInspection.CopyHBoxproblemCode0ca816d574b8640=box
 tablet$0$popupFacility.CopyhbxSelectedSite051f8339c86a447=box
 tablet$0$frmEditActiveWO.CopyLabel0606f8d47cfa740=label
 tablet$0$frmCreateWO.CopyLabel0334243ede31d4f=label
+tablet$0$frmViewMoreInfo.CopyHBox08f44f5d749384d=box
