--- a/lua_widget_m4_info.properties
+++ b/lua_widget_m4_info.properties
@@ -1,5 +1,5 @@
 #This file contains the lua m4Constants, the widgetQualifying ids and the type of the widget
-#Thu May 22 18:26:15 EDT 2014
+#Thu May 22 19:09:17 EDT 2014
 ~|~frmDowntime.HBox0c75f81874c1f42=box
 ~|~frmValveInspection.HBox0b56740eae09645=box
 ~|~popTimePicker.CopyButton0bcf4d218cf034e=button
@@ -14,6 +14,7 @@
 ~|~frmValveInspection.CopyHBoxproblemCode09f431432eb0743=box
 ~|~frmViewAwaitingWO.CopyLabel00e429794d33c49=label
 ~|~popAttachments.HBox03a58a73124034d=box
+~|~frmViewMoreInfo.CopyHBox043a43f721e3f44=box
 ~|~frmEditActiveWO.CopyComboBox05611e3e70d6a47=combobox
 ~|~frmEditActiveWO.CopyLabel06d31378aace348=label
 ~|~frmValveInspection.CopyTextField0da51ecca6a4e4f=textbox2
@@ -25,9 +26,11 @@
 ~|~popupArea.CopyhbxSelectedArea009b68bd9620740=box
 ~|~frmValveInspection.CopyHBox0f8a66579044d48=box
 ~|~popupSite.CopyButton0302e6379156b45=button
+~|~popLocationFilter.combobox1568159912394375=combobox
 ~|~frmViewActiveWO.navDowntime=button
 ~|~frmDowntime.CopyHBoxproblemCode0b43063da71284f=box
 ~|~popupFacSystem.CopyhbxSelectedSite0a41e0b9afd634e=box
+~|~frmViewMoreInfo.txtarMoreInfo=textarea2
 ~|~popAttachments.CopyHBox022f0bb539f3443=box
 ~|~frmViewActiveWO.CopyLabel04b6703bba78b4f=label
 ~|~frmCreateWO.swiATF=switch
@@ -43,8 +46,10 @@
 ~|~popupInstrument.CopyhbxSelectedSite015b13076d3434b=box
 ~|~popupEquipment.CopyhbxSelectedSite0f15fce31695a4a=box
 ~|~frmEditActiveWO.CopyComboBox02e07452c3f8141=combobox
+~|~popPriorityFilter.hbox1568159912380697=box
 ~|~popupFacSystem.CopyhbxSelectedSite0c94a8df6020145=box
 ~|~popupSubEquipment.CopyLabel0798cebc05c294e=label
+~|~frmViewMoreInfo.CopyLabel0a085706adae14a=label
 ~|~frmDowntime.navActiveWorkOrders=button
 ~|~frmViewAwaitingWO.CopyHBox043a43f721e3f44=box
 ~|~frmDowntime.CopyLabel0b1d9abb0f3424a=label
@@ -53,8 +58,10 @@
 ~|~frmCreateWO=form2
 ~|~frmValveInspection.CopyHBox0827b1e29da9840=box
 ~|~frmViewAwaitingWO=form2
+~|~popPriorityFilter.CopyButton0bcf4d218cf034e=button
 ~|~frmValveInspection.CopyHBox086b52869fd744f=box
 ~|~popupInstrument.HBox00ec5efe5e8704a=box
+~|~frmViewMoreInfo.CopyLabel09a8442b12ca94c=label
 ~|~popAttachments.HBox024685c11b3444c=box
 ~|~popupGGS.CopyhbxSelectedSite0549c96d36a1343=box
 ~|~frmDowntime.CopyComboBox07576ca61d4d447=combobox
@@ -74,9 +81,11 @@
 ~|~frmDowntime.CopyLabel040b4f784ab644c=label
 ~|~popupEquipment.CopyButton03dcd1d3df30740=button
 ~|~popupFacSubsys.CopyhbxSelectedSite03cd0f4be5fdc4b=box
+~|~frmViewMoreInfo.CopyButton06217ec4133174a=button
 ~|~popupGGS.CopyLabel075064154ee1545=label
 ~|~popupEquipment.CopyHBox03994091f821d41=box
 ~|~popAttachments.Button0dfb95bb959a149=button
+~|~popDueDateFilter.CopyHBox087eed2ceed8d4a=box
 ~|~popupEquipment.CopyhbxSelectedSite0d3c8ec5259a547=box
 ~|~frmCreateWO.CopyLabel06efe9974c73144=label
 ~|~frmEditActiveWO.CopyLabel02e43cd9934c445=label
@@ -97,6 +106,7 @@
 ~|~frmValveInspection.CopyHBoxproblemCode007f91ffe198846=box
 ~|~frmViewActiveWO.CopyLabel0b329b45036ff4a=label
 ~|~frmValveInspection.CopyLabel020146862fb514a=label
+~|~popPriorityFilter.CopyHBox087eed2ceed8d4a=box
 ~|~popupEquipment.CopyLabel0bd0138deca9e42=label
 ~|~frmDowntime.hboxMain=box
 ~|~frmViewAwaitingWO.navAwaitingApproval=button
@@ -114,6 +124,8 @@
 ~|~frmApprovalWOList=form2
 ~|~frmEditActiveWO.CopyHBox04d80fe3bc9974c=box
 ~|~popAttachments.Label00ce247c1b5bc44=label
+~|~frmViewMoreInfo.CopyHBox0d136eb55c4b64c=box
+~|~frmViewMoreInfo.hbox1568159912404570=box
 ~|~frmValveInspection.CopyButton0226a251a7d2f45=button
 ~|~popupEquipment.CopyLabel095119ed0bdb74d=label
 ~|~frmViewActiveWO.CopyHBox0164edd9d181b47=box
@@ -123,6 +135,7 @@
 ~|~popupFacility.CopyLabel0f94c0f0c70304a=label
 ~|~popupFacSystem.CopyLabel0a38bf8775d6e4a=label
 ~|~frmCreateWO.hboxProblemCode=box
+~|~frmViewMoreInfo.CopyLabel00f77a45ee9e548=label
 ~|~frmEditActiveWO.CopyHBoxproblemCode0bd30cdde1ba740=box
 ~|~frmEditActiveWO.CopyLabel017435858ee574e=label
 ~|~popLocationFilter=popup
@@ -130,6 +143,7 @@
 ~|~frmCreateWO.CopyHBoxproblemCode0250d62d0c60b47=box
 ~|~frmCreateWO.hboxAfterTheFactSwitch=box
 ~|~popupFacSubsys.CopyButton0cf138484de6e4e=button
+~|~frmViewMoreInfo.CopyHBox08f44f5d749384d=box
 ~|~popupFacSystem.CopyhbxSelectedSite0675e4a635f8e47=box
 ~|~popChangeWOStatus.txtComment=textarea2
 ~|~frmEditActiveWO.navCreateWorkOrder=button
@@ -137,6 +151,8 @@
 ~|~frmValveInspection.CopyTextField0cf856c2e055e46=textbox2
 ~|~frmValveInspection.CopyHBox000071a938b4f4d=box
 ~|~frmActiveWOList.Label058bff9804f4f45=label
+~|~frmViewMoreInfo.CopyLabel00e429794d33c49=label
+~|~frmViewMoreInfo.CopyHBox0620cdd4316d042=box
 ~|~frmCreateWO.hboxWorkSubtype=box
 ~|~popChangeWOStatus.Button0ee1a260287f842=button
 ~|~popupSubEquipment.CopyhbxSelectedSite0bead52ee20a34c=box
@@ -145,6 +161,7 @@
 ~|~popupSubEquipment.CopyLabel02f8b50d7cbc14e=label
 ~|~popupEquipment.CopyhbxSelectedSite07a64c695009b4f=box
 ~|~frmDowntime.CopyHBoxproblemCode04762a265862f40=box
+~|~frmViewMoreInfo.CopyLabel0933d517e58f64b=label
 ~|~frmEditActiveWO.CopyHBoxproblemCode08bca32c8dca142=box
 ~|~frmValveInspection.CopyTextField0172af93a903d4b=textbox2
 ~|~popupInstrument.CopyLabel06bd7446b1e3448=label
@@ -154,6 +171,7 @@
 ~|~popupFacility.CopyhbxSelectedArea0c570010f615341=box
 ~|~frmMoreInfoList.CopyVBox05c46e1637ddc4d=box
 ~|~frmDowntime.CopyComboBox0c4d3e9e37f1c49=combobox
+~|~frmViewMoreInfo.CopyLabel0752fd18ea8df40=label
 ~|~frmActiveWOList.lblDueDateFilter=label
 ~|~frmViewAwaitingWO.CopyLabel0f2d8e5c336284d=label
 ~|~frmValveInspection.TextField071bce55c3c6243=textbox2
@@ -175,8 +193,8 @@
 ~|~popupEquipment.CopyhbxSelectedArea0fb23f8f4fec448=box
 ~|~frmValveInspection.Button06ff7fc2a4ba74b=button
 ~|~frmViewAwaitingWO.CopyLabel0d5715dadfc7b44=label
-~|~frmViewAwaitingWO.CopyButton0769390d0dfe14e=button
 ~|~frmViewActiveWO.Label0dd01e45bbed64e=label
+~|~frmViewAwaitingWO.CopyButton0769390d0dfe14e=button
 ~|~popupFacility.CopyLabel05b54879243f14a=label
 ~|~popupFacility.CopyLabel06bf7d9ba77e841=label
 ~|~frmViewAwaitingWO.CopyHBox054a7688c99f04c=box
@@ -192,6 +210,7 @@
 ~|~popupArea.CopyButton028570489d35040=button
 ~|~popupSubEquipment.CopyhbxSelectedArea0668b90fdf3b643=box
 ~|~popChangeWOStatus=popup
+~|~popLocationFilter.label1568159912380696=label
 ~|~frmValveInspection.CopyHBox0b3febcb0639e41=box
 ~|~frmApprovalWOList.hboxMain=box
 ~|~frmMoreInfoList.vboxNav=box
@@ -211,6 +230,7 @@
 ~|~frmActiveWOList.navAwaitingApproval=button
 ~|~popupSubEquipment.CopyhbxSelectedSite0b0b2cf00bbea48=box
 ~|~popupInstrument.hbxSelectedArea=box
+~|~popDueDateFilter.CopyButton0d1454a321f8845=button
 ~|~popupSite.CopyLabel0f5d19b04c30847=label
 ~|~frmMainMenu=form2
 ~|~frmApprovalWOList.navActiveWorkOrders=button
@@ -221,6 +241,7 @@
 ~|~frmViewAwaitingWO.CopyLabel047f5f421bd714c=label
 ~|~popupSubEquipment.CopyhbxSelectedSite0fecf78adf87041=box
 ~|~popupInstrument.CopyhbxSelectedSite044ea2f0a40744f=box
+~|~popDueDateFilter.hbox1568159912380697=box
 ~|~frmViewActiveWO.CopyHBox05b1a6322d91c4d=box
 ~|~frmMainMenu.navAwaitingApproval=button
 ~|~frmViewAwaitingWO.CopyHBox0d136eb55c4b64c=box
@@ -249,12 +270,13 @@
 ~|~frmViewMoreInfo.navCreateWorkOrder=button
 ~|~frmDowntime.CopyButton06fee5ba6afb947=button
 ~|~popChangeWOStatus.HBox014cab542fe3d42=box
+~|~frmViewMoreInfo.CopyHBox01dce313e08ef4b=box
 ~|~frmEditActiveWO.navActiveWorkOrders=button
 ~|~frmViewAwaitingWO.CopyLabel041c1b738c2ad44=label
 ~|~frmViewAwaitingWO.CopyHBox0620cdd4316d042=box
 ~|~frmValveInspection.CopyHBox04348cff9abdf4b=box
-~|~popupEquipment.CopyhbxSelectedSite07c129eabf2034e=box
 ~|~frmViewActiveWO.vboxNav=box
+~|~popupEquipment.CopyhbxSelectedSite07c129eabf2034e=box
 ~|~frmValveInspection.VBox0ce3a326052c948=box
 ~|~frmViewAwaitingWO.HBox063dff2d238b340=box
 ~|~frmMainMenu.navMoreInfo=button
@@ -277,6 +299,7 @@
 ~|~frmCreateWO.CopyButton00efc277a014444=button
 ~|~frmValveInspection.CopyLabel04691df3e4a5048=label
 ~|~frmCreateWO.CopyButtonScanbarcode0e5c2601049354c=button
+~|~popPriorityFilter.cbxPriorityFilter=combobox
 ~|~popupFacSubsys=popup
 ~|~frmViewActiveWO.CopyLabel0be0b2dee77df4e=label
 ~|~frmViewActiveWO.navAwaitingApproval=button
@@ -286,6 +309,7 @@
 ~|~popupFacility.CopyhbxSelectedSite051f8339c86a447=box
 ~|~frmMoreInfoList.hboxMain=box
 ~|~popupSubEquipment.CopyhbxSelectedSite0f4cd88ec9aeb42=box
+~|~popPriorityFilter.label1568159912380696=label
 ~|~frmDowntime.CopyComboBox016d1a42b6bde43=combobox
 ~|~popLongdesc=popup
 ~|~frmViewActiveWO.hboxMain=box
@@ -298,6 +322,7 @@
 ~|~frmCreateWO.ComboBox0062ed8347b8446=combobox
 ~|~frmActiveWOList.btnPriorityFilter=button
 ~|~popupInstrument.Button046ec36f894e941=button
+~|~frmViewMoreInfo.CopyLabel0f2d8e5c336284d=label
 ~|~popupArea.CopyhbxSelectedArea07dc2eff816504d=box
 ~|~frmDowntime.navAwaitingApproval=button
 ~|~frmCreateWO.Label03e6fb1d37b3342=label
@@ -322,12 +347,14 @@
 ~|~popupEquipment.CopyLabel01702a48bb98a48=label
 ~|~popupInstrument.Label0bc97360a806d4d=label
 ~|~popupGGS.CopyLabel0906a710f23404d=label
+~|~popLocationFilter.CopyButton0d1454a321f8845=button
 ~|~frmCreateWO.CopyComboBox044e2ed2adaa347=combobox
-~|~frmViewActiveWO.CopyHBox08795aff42c2347=box
 ~|~popLongdesc.Label0b2456e8425e14c=label
+~|~frmViewActiveWO.CopyHBox08795aff42c2347=box
 ~|~frmViewActiveWO.Button08d29ce5c44a44b=button
 ~|~frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 ~|~popupArea.CopyHBox03c50b568f6cf4d=box
+~|~popDueDateFilter.CopyButton0bcf4d218cf034e=button
 ~|~popupArea.CopyhbxSelectedArea019b16609c91c41=box
 ~|~frmValveInspection.CopyComboBox04f7c574a7dcd44=combobox
 ~|~frmCreateWO.CopyLabel0e3617d6326f84b=label
@@ -337,24 +364,28 @@
 ~|~frmCreateWO.navCreateWorkOrder=button
 ~|~Temp09e2ddd70484a43=header
 ~|~frmViewAwaitingWO.navActiveWorkOrders=button
+~|~frmViewMoreInfo.Label027fba225f4ab44=label
 ~|~frmCreateWO.CopyLabel01313c791ff954c=label
 ~|~frmCreateWO.hboxCauseCode=box
 ~|~popupInstrument.CopyhbxSelectedSite0aa9de63963934a=box
 ~|~popupFacSubsys.CopyLabel0bcd8fa3dfe3548=label
 ~|~popupFacSubsys.CopyLabel0317dea268a9842=label
 ~|~frmMainMenu.hboxMain=box
+~|~frmViewMoreInfo.CopyHBox0611ef625d1b346=box
 ~|~popChangeWOStatus.RadioButtonGroup0ec7239fce7c242=radiobuttongroup
 ~|~frmValveInspection.Button077cdd09588df4c=button
 ~|~frmViewActiveWO.HBox087a589b4e64d49=box
 ~|~popupSite.CopyhbxSelectedSite0695b7a40d31e40=box
 ~|~frmDowntime.CopyLabel01f62ce85e2914f=label
 ~|~frmMoreInfoList=form2
-~|~frmViewActiveWO.VBox08a3358600dc841=box
 ~|~popLongdesc.CopyButton0f2d885d0009140=button
+~|~frmViewActiveWO.VBox08a3358600dc841=box
+~|~popDueDateFilter.label1568159912380696=label
 ~|~popWOApproval.CopytxtComment0f1009f615f5e46=textarea2
 ~|~frmViewMoreInfo.vboxNav=box
 ~|~frmDowntime.CopyLabel02c96feb07aba4f=label
 ~|~popWOApproval.CopyButton03700868ebd3c4f=button
+~|~frmViewMoreInfo.CopyLabel047f5f421bd714c=label
 ~|~popupFacSubsys.CopyButton0d309ac8273324d=button
 ~|~frmEditActiveWO.CopyLabel0153b3fa9cb4742=label
 ~|~popupFacility.CopyhbxSelectedSite05d923b0728644e=box
@@ -365,8 +396,8 @@
 ~|~frmValveInspection.HBox05cbcde93563743=box
 ~|~frmViewMoreInfo.navMoreInfo=button
 ~|~frmViewAwaitingWO.CopyHBox01dce313e08ef4b=box
-~|~popupFacSystem.CopyLabel0ab50451d3bfe4c=label
 ~|~frmViewActiveWO.CopyHBox0347de8a4cc4e4c=box
+~|~popupFacSystem.CopyLabel0ab50451d3bfe4c=label
 ~|~frmActiveWOList.HBox05c37b97b56e248=box
 ~|~frmDowntime.CopyLabel07088c5013f9142=label
 ~|~popupFacility.CopyhbxSelectedSite0aa642f6cad4048=box
@@ -376,12 +407,15 @@
 ~|~frmDowntime.Button04d8b6375b2ef41=button
 ~|~frmDowntime.CopyHBoxproblemCode06373760f48384a=box
 ~|~frmViewActiveWO.CopyHBox01c5f3074c60f46=box
+~|~frmViewMoreInfo.CopyLabel041c1b738c2ad44=label
 ~|~frmViewActiveWO.CopyLabel00d08986766644b=label
 ~|~frmValveInspection.CopyTextField0918e6ca6806b46=textbox2
 ~|~CopyHBox05ab541b50c7444=box
+~|~popLocationFilter.label1568159912388250=label
 ~|~frmEditActiveWO.CopyButtonScanbarcode04465f98f4f8c40=button
 ~|~frmCreateWO.ComboBox0c5169188404d4d=combobox
 ~|~HBox05936750fff9f49.Label0b7d0cd6882d349=label
+~|~popLocationFilter.CopyHBox087eed2ceed8d4a=box
 ~|~frmActiveWOList.navCreateWorkOrder=button
 ~|~popupSubEquipment.CopyButton0bff0799a297747=button
 ~|~popTimePicker=popup
@@ -398,6 +432,7 @@
 ~|~frmApprovalWOList.navCreateWorkOrder=button
 ~|~frmValveInspection.CopyHBoxproblemCode03741490f3e2244=box
 ~|~frmMainMenu.navCreateWorkOrder=button
+~|~frmViewMoreInfo.label1568159912405675=label
 ~|~frmViewAwaitingWO.CopyLabel0a085706adae14a=label
 ~|~frmMainMenu.Label09e53b932632649=label
 ~|~frmApprovalWOList.CopySegment06d36cd0777dd4f=segment2
@@ -415,6 +450,7 @@
 ~|~frmEditActiveWO.CopyHBoxproblemCode092079a6a536a4e=box
 ~|~frmValveInspection.CopyTextField09429de9ec5b14d=textbox2
 ~|~popupFacSystem.CopyHBox0b8f4ae0ac61247=box
+~|~popLocationFilter.CopyButton0bcf4d218cf034e=button
 ~|~frmViewActiveWO.CopyHBox02268996263ad43=box
 ~|~frmDowntime.ComboBox01868aea2e88547=combobox
 ~|~popupSite.CopyLabel0ec466043ce4d46=label
@@ -425,11 +461,13 @@
 ~|~frmEditActiveWO.CopyLabel0606f8d47cfa740=label
 ~|~frmCreateWO.txtTitle=textbox2
 ~|~frmEditActiveWO.CopyButton0128ee35641524f=button
+~|~frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 ~|~frmValveInspection.CopyHBoxproblemCode0046f8572b8a246=box
 ~|~popWOApproval.CopyHBox03569c597504240=box
 ~|~popupFacSystem=popup
 ~|~frmValveInspection.CopyComboBox0988e7ee327ae40=combobox
 ~|~popupFacSystem.CopyButton05c72f1e8858f40=button
+~|~frmViewMoreInfo.CopyButton0a7c6edbb2be947=button
 ~|~popupSite.CopyLabel05b50cf0e211049=label
 ~|~frmEditActiveWO.CopyHBoxproblemCode00c73b61608514c=box
 ~|~frmDowntime.CopyHBoxproblemCode0de80eb4caa944f=box
@@ -471,6 +509,7 @@
 ~|~frmViewAwaitingWO.CopyHBox0611ef625d1b346=box
 ~|~popAttachments.CopyButton08b2f6dc0164346=button
 ~|~frmValveInspection.CopyLabel00eb8a9f125c044=label
+~|~popPriorityFilter.label1568159912388250=label
 ~|~frmValveInspection.CopyHBoxproblemCode0ca816d574b8640=box
 ~|~frmMainMenu.navActiveWorkOrders=button
 ~|~frmCreateWO.hboxDescription=box
@@ -480,6 +519,7 @@
 ~|~popupFacSystem.CopyhbxSelectedSite06fe554dd85f942=box
 ~|~popupGGS.CopyButton05b86474a8d924e=button
 ~|~frmActiveWOList.hboxMain=box
+~|~frmViewMoreInfo.CopyLabel098b20d3da7094d=label
 ~|~popupSubEquipment.CopyLabel0256dbfcab7164b=label
 ~|~frmCreateWO.CopyComboBox0e3d53e26078543=combobox
 ~|~popupEquipment.CopyLabel027020417ad9c4f=label
@@ -503,8 +543,10 @@
 ~|~frmValveInspection.Switch0974badc4c0be4d=switch
 ~|~popChangeWOStatus.Button03028c36ed0fb44=button
 ~|~frmActiveWOList.btnLocationFilter=button
+~|~frmViewMoreInfo.CopyButton0769390d0dfe14e=button
 ~|~frmDowntime.navCreateWorkOrder=button
 ~|~popupFacSystem.CopyLabel0c565109fad2442=label
+~|~popLocationFilter.hbox1568159912380697=box
 ~|~frmMoreInfoList.Segment06653d08601054e=segment2
 ~|~frmEditActiveWO.navAwaitingApproval=button
 ~|~popLongdesc.VBox049a8fca94aba47=box
@@ -537,17 +579,22 @@
 ~|~popupSubEquipment.CopyLabel0e4bd9053300540=label
 ~|~popupSubEquipment.CopyhbxSelectedSite0192113b2080f49=box
 ~|~popupFacility=popup
+~|~frmViewMoreInfo.CopyLabel0f880717279644d=label
 ~|~popupSubEquipment=popup
+~|~popPriorityFilter.CopyButton0d1454a321f8845=button
 ~|~popLongdesc.TextArea0309738acc7bb42=textarea2
 ~|~frmDowntime.VBox0a71adbbfd3494c=box
 ~|~popupSubEquipment.CopyhbxSelectedSite058fcb4d524184a=box
 ~|~frmViewAwaitingWO.CopyButton0b723d5d72fad4b=button
+~|~popDueDateFilter.calDueDate=calendar
 ~|~frmActiveWOList.lblPriorityFilter=label
 ~|~frmViewActiveWO.CopyLabel0e3b6b4c1993c4f=label
 ~|~popupEquipment.CopyLabel0d0f63afe980441=label
 ~|~frmViewActiveWO.CopyLabel06e59122393494c=label
+~|~frmViewMoreInfo.CopyHBox08b4357c544c342=box
 ~|~frmDowntime.CopyButton05809a09c62a643=button
 ~|~frmActiveWOList.CopyVBox0b99ec925d1d34a=box
+~|~popDueDateFilter.label1568159912388250=label
 ~|~frmCreateWO.hboxWorkCategory=box
 ~|~frmEditActiveWO.CopyHBox09009ce368a6249=box
 ~|~frmActiveWOList.navActiveWorkOrders=button
@@ -562,13 +609,14 @@
 ~|~popChangeWOStatus.HBox0be54fb10f7f545=box
 ~|~frmValveInspection.CopyLabel08ab41f1ac8044b=label
 ~|~frmViewActiveWO.CopyButton016b755f7107648=button
+~|~frmViewMoreInfo.HBox063dff2d238b340=box
 ~|~frmCreateWO.hboxWorkSubcategory=box
 ~|~frmViewActiveWO.CopyHBox05aa135f6dbb342=box
 ~|~frmCreateWO.navActiveWorkOrders=button
 ~|~popWOApproval.CopyRadioButtonGroup04790a00f681f48=radiobuttongroup
 ~|~frmApprovalWOList.navAwaitingApproval=button
-~|~frmCreateWO.hboxTitle=box
 ~|~popLongdesc.HBox02b07e2e0911b45=box
+~|~frmCreateWO.hboxTitle=box
 ~|~popupFacility.CopyButton0290c7985b90144=button
 ~|~popupSubEquipment.CopyhbxSelectedSite0e431b69d121343=box
 ~|~frmEditActiveWO.vboxNav=box
